# practices

./: .gitignore  README.md  flask.dockerfile  greenlet_example.py  greeter_client.py  greeter_server.py  main.py  pyproject.toml
asyn_app/: client.py  flask_client.py  requirements.txt  server.py
asyn_app/flask_app/: app.py  gunicorn.conf.py
asyn_app/grpc_app/: app_pb2.py  app_pb2_grpc.py  greeter_client.py  greeter_server.py
flask_hello_world/: app.py  dockerfile
grpc_python/: greeter_pb2.py  greeter_pb2_grpc.py  hello_pb2.py  hello_pb2_grpc.py
k8s/: deployment_v1.yaml  deployment_v11.yaml  deployment_v12.yaml  deployment_v3.yaml  deployment_v4.yaml
kafka/: common.py  producer.py  question.md
middleware/: get_info_app.py  main_flask_app.py  middleware.py  readme.md
mongo/: main.py
pb/: greeter.proto  hello.proto
practice/base/: Rodent.java  TowFun.java  hello.java
python_models/: base.py  const.py  processer.py
redis_wrapper/: redis_wrapper.py
simple_flask_app/: app.py
src/: __init__.py  server.py
src/service/: __init__.py  greeter.py
test_mypy/: test.py
tests/: test_redis_wrapper.py
