[tool.poetry]
name = "grpc_practice"
version = "0.1.0"
description = ""
authors = ["shuai.li <shuai.li@gamesvessel.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.41.0"
grpcio-tools = "^1.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/"
